--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,7 +10,8 @@ pipeline {
         
         stage("Test") {
             steps {
-                sh "sudo npm install"
+                sh "sudo apt install npm"
+                sh "sudo apt install nodejs"
                 sh "npm test"
             }
         }
