--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,15 +10,13 @@ pipeline {
         
         stage("Test") {
             steps {
-                sh "sudo apt install npm"
-                sh "sudo apt install nodejs"
-                sh "npm test"
+                bat "npm test"
             }
         }
         
         stage("Build") {
             steps {
-                sh "npm start"
+                bat "npm start"
             }
         }
     }
