--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,6 +8,12 @@ pipeline {
             }
         }
         
+        stage("PackageInstall") {
+            steps {
+                bat "npm install"
+            }
+        }
+        
         stage("Build") {
             steps {
                 bat "npm start"
