--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,6 +16,7 @@ pipeline {
         
         stage("Build") {
             steps {
+                bat "npm install -g nodemon"
                 bat "npm start"
             }
         }
