--- a/JenkinsFile
+++ b/JenkinsFile
@@ -8,16 +8,24 @@ pipeline {
             }
         }
         
-        stage("Test") {
+        stage("Build Image") {
             steps {
-                sh "sudo npm install"
-                sh "npm test"
+                bat "docker build -t myjenkinsapp ."
             }
         }
-        
-        stage("Build") {
-            steps {
-                sh "npm start"
+    }
+    
+    post {
+        success {
+            // Mark the build as successful
+            script {
+                currentBuild.result = 'SUCCESS'
+            }
+        }
+        failure {
+            // Mark the build as failed
+            script {
+                currentBuild.result = 'FAILURE'
             }
         }
     }
