--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "puppetter.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon puppetter.js"
+    "start" : "set NODE_ENV=test&&nodemon puppetter.js"
   },
   "keywords": [],
   "author": "",
