--- a/JenkinsFile
+++ b/JenkinsFile
@@ -10,7 +10,7 @@ pipeline {
         
         stage("Build Image") {
             steps {
-                sh "docker build -t myjenkinsapp ."
+                bat "docker build -t myjenkinsapp ."
             }
         }
     }
