--- a/JenkinsFile
+++ b/JenkinsFile
@@ -11,10 +11,17 @@ pipeline {
         stage("Build Image") {
             steps {
                 script {
-                    def dockerImageName = "myjenkinsapp"
+                    def dockerImageName = "puppetter"
                     def dockerImageVersion = getDockerImageVersion(dockerImageName)
 
-                    bat "docker build -t $dockerImageName:$dockerImageVersion ."
+                    def dockerImageExists = sh(script: "docker images -q $dockerImageName:$dockerImageVersion", returnStatus: true) == 0
+
+                    if (!dockerImageExists) {
+                        echo "Docker image not found. Building using Ubuntu system."
+                        sh "sudo docker build -t $dockerImageName:$dockerImageVersion ."
+                    } else {
+                        echo "Docker image already available."
+                    }
                 }
             }
         }
@@ -36,7 +43,7 @@ pipeline {
 
 def getDockerImageVersion(imageName) {
     def version = 1
-    def dockerImageDetails = bat(script: "docker images --format \"{{.Tag}}\" $imageName", returnStdout: true).trim()
+    def dockerImageDetails = sh(script: "docker images --format \"{{.Tag}}\" $imageName", returnStdout: true).trim()
 
     if (dockerImageDetails) {
         def versions = dockerImageDetails.tokenize('\n').collect { it.toInteger() }
